--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
   <title>Enigma</title>
 
   <style>
-    body {
+
+    /* ADIÇÃO PARA REMOVER BORDAS BRANCAS EM CELULAR */
+    html, body {
+      background: linear-gradient(135deg, #0a0f24, #1a2240);
+      background-color: #0a0f24;
+      color-scheme: dark;
+      overscroll-behavior: none;
       margin: 0;
       padding: 0;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      padding: 20px;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #0a0f24, #1a2240);
       color: #fff;
@@ -16,7 +33,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      -webkit-text-size-adjust: 100%;
     }
 
     .card {
@@ -135,7 +152,7 @@
     <img src="FOTO2.jpg" class="countdown-photo" />
     <h2>PARABÉNS</h2>
     <p>Você passou da primeira fase!</p>
-    <p>Foi fácil, né? Bom... foi apenas o começo para você entender a dinâmica; daqui pra frente será diferente, boa sorte!</p>
+    <p>Foi fácil, né? Bom... foi apenas o começo para você entender a dinâmica; daqui pra frente será mais diferente, boa sorte!</p>
     <h2>Próxima pista em:</h2>
     <div id="countdownBox">Carregando...</div>
   </div>
