--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ENIGMA - LAURA</title>
+  <title>Enigma</title>
 
   <style>
 
@@ -52,8 +52,16 @@
       to { opacity: 1; transform: translateY(0);} 
     }
 
-    h2 { margin: 0 0 10px 0; font-weight: 600; }
-    p { opacity: 0.9; }
+h2 {
+  margin: 20px 0 12px 0;
+  font-weight: 600;
+}
+
+p {
+  opacity: 0.9;
+  margin: 12px 0;
+}
+
 
     input {
       width: 100%;
@@ -115,9 +123,9 @@
   <!-- TELA INICIAL ORGANIZADA -->
   <div class="card" id="introPage">
     <h2>Bem-Vinda, Laura!</h2>
-    <p>Antes de começar, vamos a uma explicação breve:
+    <p>Antes de começar, vamos a uma explicação breve:</p>
     <p>Cada pergunta te leva a um passo mais perto de algo que preparei pra voce com muito carinho.</p>
-    <p>Voce passará por enigmas, perguntas, e alguns jogos que preparei para conseguir desbloquear a próxima fase, espero que goste.</p>
+    <p>Voce passará por enigmas, perguntas, e alguns jogos que preparei para conseguir desbloquear a próxima fase, espero que goste.
     <h2>BOA SORTE!</h2>
     <button onclick="startGame()">VAMOS COMEÇAR?</button>
   </div>
