--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ p {
     <img src="FOTO2.jpg" class="countdown-photo" />
     <h2>PARABÉNS</h2>
     <p>Você passou da primeira fase!</p>
-    <p>Foi fácil, né? Bom... foi apenas o começo para você entender a dinâmica; daqui pra frente será mais diferente, boa sorte!</p>
+    <p>Foi fácil, né? Bom... foi apenas o começo para você entender a dinâmica; daqui pra frente será diferente, boa sorte!</p>
     <h2>Próxima pista em:</h2>
     <div id="countdownBox">Carregando...</div>
   </div>
